--- a/global/header.css
+++ b/global/header.css
@@ -141,7 +141,8 @@ header .container-itens .banner {
   position: absolute;
   color: #ff9d4a;
   font-weight: bold;
-  right: -80%;
+  font-size: 1rem;
+  right: -45%;
   /* top: 40%; */
   display: block;
   /* text-align: center; */
@@ -150,7 +151,7 @@ header .container-itens .banner {
   /* padding: 10px 20px; */
   margin-bottom: 5px;
   transform: translate(-80%);
-  bottom: -50px;
+  bottom: -29px;
 }
 
 /*por enquanto comentei ele no html, tentar criar ele denovo com z-index*/
@@ -158,27 +159,36 @@ header .container-itens .banner {
   display: block;
   position: absolute;
   outline: 1px solid purple;
-  padding: 10px 20px;
-  font-size: 1.2rem;
-  margin-bottom: 5px;
+  /* padding: 8.52px 20px; */
+  /* font-size: 1.2rem; */
+  /* font-weight: 700; */
   color: #ff7d73;
   top: 40%;
   right: -80%;
   text-transform: uppercase;
-  background-color: white;
-  z-index: -1;
-  transform: skewX(-10deg); /*dá o efeito da borda cortada em diagonal*/
-  /* width: 250px; */
-  /* height: 100%; */
-  /* margin: 10px; */
-  /* transform: translateY(-50%); */
-  /* left: 40%; */
-  /* bottom: 15.5%; */
-  /* margin-left: -200px; */
-  /* margin-top: 165px; */
-  /* max-width: 200px; */
-  /* text-align: center; */
 }
+.marca-rag strong {
+  display: block;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  font-weight: 700;
+  font-family: signika_regular;
+  margin: 0px 0px 5px;
+  /* margin-bottom: 5px; */
+}
+/* background branco do ragnarok logo*/
+.marca-rag strong::before {
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: #fff;
+  transform: skewX(-10deg);
+  z-index: -1;
+}
+
 .marca-rag {
   position: absolute;
   top: 60.5%;
