--- a/global/global.css
+++ b/global/global.css
@@ -2,7 +2,7 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Signika", sans-serif;
   color: #111111;
   padding-bottom: 600px;
 }
